# target-http

./: .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
target_http/: __init__.py  __main__.py  sinks.py  target.py  test.json
tests/: __init__.py  test_core.py
